[gd_scene load_steps=2 format=3 uid="uid://1boxp8lgkat1"]

[ext_resource type="Script" uid="uid://bf4lj25woc25w" path="res://addons/plugin_manager/plugin_manager_menu.gd" id="1_ib42r"]

[node name="PluginEnableDisable" type="PanelContainer"]
offset_right = 350.0
offset_bottom = 250.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListScroll" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="List" type="VBoxContainer" parent="ListScroll"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_ib42r")

[node name="Plugin" type="HBoxContainer" parent="ListScroll/List"]
visible = false
layout_mode = 2

[node name="ShowInToolbar" type="CheckBox" parent="ListScroll/List/Plugin"]
layout_mode = 2

[node name="NameScroll" type="ScrollContainer" parent="ListScroll/List/Plugin"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="NameContainer" type="HBoxContainer" parent="ListScroll/List/Plugin/NameScroll"]
layout_mode = 2

[node name="Name" type="Label" parent="ListScroll/List/Plugin/NameScroll/NameContainer"]
layout_mode = 2
text = "PlaceholderPluginName"

[node name="Enabled" type="CheckButton" parent="ListScroll/List/Plugin"]
layout_mode = 2
button_mask = 3

[node name="Refresh" type="Button" parent="ListScroll/List/Plugin"]
layout_mode = 2

[node name="ResyncContainer" type="HBoxContainer" parent="ListScroll/List"]
layout_mode = 2

[node name="Resync" type="Button" parent="ListScroll/List/ResyncContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "Resync menu & toolbar"
